# my_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.c
string/: my_string.c  my_string.h
